--- a/newAds2021/build.gradle
+++ b/newAds2021/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    implementation 'com.applovin:applovin-sdk:11.3.1'
+    implementation 'com.applovin.mediation:facebook-adapter:6.8.0.12'
+
 
     implementation 'com.facebook.android:audience-network-sdk:6.8.0'
     implementation 'com.google.ads.mediation:facebook:6.8.0.0'
