--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_app_id" />
+
+<!--        <meta-data-->
+<!--            android:name="applovin.sdk.key"-->
+<!--            android:value="OoVicuSE_6dVkTnZ9kO67XO17hAqRXOdR5KToHkHP3P3SvSnBI8CUmuxbWFg0hHk8kXx2byHKiial9QUapI_ls"/>-->
     </application>
 
 </manifest>
