--- a/newAds2021/build.gradle
+++ b/newAds2021/build.gradle
@@ -30,7 +30,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'org.jetbrains:annotations:15.0'
     testImplementation 'junit:junit:4.+'
@@ -44,14 +44,18 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 
     implementation 'com.applovin:applovin-sdk:11.3.1'
     implementation 'com.applovin.mediation:facebook-adapter:6.8.0.12'
+    implementation 'com.applovin.mediation:vungle-adapter:6.11.0.1'
 
 
-    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
-    implementation 'com.google.ads.mediation:facebook:6.8.0.0'
+    implementation 'com.vungle:publisher-sdk-android:6.11.0'
+
+
+    implementation 'com.facebook.android:audience-network-sdk:6.11.0'
+    implementation 'com.google.ads.mediation:facebook:6.11.0.0'
 
     implementation 'com.android.support:multidex:1.0.3'
 
