--- a/newAds2021/build.gradle
+++ b/newAds2021/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -46,9 +47,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
 
-    implementation 'com.applovin:applovin-sdk:11.3.1'
+    implementation 'com.applovin:applovin-sdk:11.4.4'
     implementation 'com.applovin.mediation:facebook-adapter:6.8.0.12'
     implementation 'com.applovin.mediation:vungle-adapter:6.11.0.1'
+    implementation 'com.applovin.mediation:google-adapter:21.0.0.2'
 
 
     implementation 'com.vungle:publisher-sdk-android:6.11.0'
@@ -60,6 +62,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
