--- a/newAds2021/build.gradle
+++ b/newAds2021/build.gradle
@@ -40,7 +40,6 @@ dependencies {
 
     //newAdsCompanion2021
     implementation 'com.google.android.gms:play-services-ads:20.3.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
 
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
@@ -60,7 +59,7 @@ dependencies {
     implementation 'com.google.ads.mediation:facebook:6.11.0.0'
 
     implementation 'com.android.support:multidex:1.0.3'
-
+    implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
